# django-rest-live

./: CHANGELOG.md  pyproject.toml  setup.py  tox.ini
rest_live/: __init__.py  consumers.py  mixins.py
test_app/: views.py
tests/: test_live.py
