[tool.poetry]
name = "django-rest-live"
version = "0.8.1"
description = "Subscriptions for Django REST Framework over Websockets."
authors = ["Penn Labs <contact@pennlabs.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pennlabs/django-rest-live"
repository = "https://github.com/pennlabs/django-rest-live"
documentation = "https://django-rest-live.readthedocs.io/en/latest/"
classifiers = [
    "Framework :: Django",
]
include = ["CHANGELOG.md", "LICENSE"]
exclude = ["tox.ini"]
packages = [
    { include = "rest_live" },
]

[tool.poetry.dependencies]
python = ">=3.8"
Django = ">=4.2"
channels = ">=4.0.0"
djangorestframework = ">=3.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
